# imap-to-slack

./: .gitignore  Cargo.toml
src/: imap.rs  lib.rs  main.rs  parse.rs  slack.rs
