[package]
name = "imap-to-slack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
envy = "0.4.2"
imap = "3.0.0-alpha.6"
slack = "0.25.0"
serde = "1.0.136"
serde_derive = "1.0.136"
dotenv = "0.15.0"
mailparse = "0.13.8"
